<resources>
    <string name="app_name">Pinterest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_something_you_need">Find something you need</string>
    <string name="your_account">Your account</string>
    <string name="profile_txt">Profile</string>
    <string name="button_txt">B</string>
    <string name="save_txt">Save</string>
    <string name="watch_txt">Watch</string>
    <string name="pins_txt">Pins</string>
    <string name="search_saved_idea">Search for your saved ideas</string>
    <string name="search_pins">Look for interesting things in Pinterest</string>
    <string name="other_pins">Other interesting pins</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
</resources>