<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageDetailActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/search_placeholder"
            />

        <ImageButton
            android:id="@+id/backButton"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />

    </FrameLayout>


    <TextView
        android:id="@+id/imageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        tools:text="Что то такое"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_icon"
            android:backgroundTint="@color/white"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/watch_txt"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/save_txt"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/red"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_ios_share_24"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_pins"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:textSize="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DetailPageRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:reverseLayout="false"
        app:spanCount="2"
        />


</LinearLayout>